# c2cargo

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: architecture.md  modules.md  pipeline.md
reference/: target-cpus.json  target-triplets.json
src/: analysis.rs  analyzer.rs  display.rs  main.rs  utils.rs
src/analyzer/: argument.rs  automake.rs  build_option.rs  case.rs  chunk.rs  conditional_compilation.rs  dictionary.rs  eval.rs  filtering.rs  flatten.rs  guard.rs  lazy_init.rs  location.rs  macro_call.rs  pkg_config.rs  platform_branch.rs  platform_support.rs  project_info.rs  record.rs  removal.rs  translator.rs  type_inference.rs  value_set_analysis.rs  variable.rs
src/analyzer/build_option/: llm_analysis.rs  use_llm.rs
src/analyzer/macro_call/: macros_list.rs
src/analyzer/translator/: pretranslation.rs  printer.rs  use_llm.rs
src/analyzer/value_set_analysis/: word_macro_eval.rs
src/utils/: enumerate.rs  glob.rs  llm_analysis.rs
