[package]
name = "c2cargo"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
# autotools-parser = { git = "https://github.com/kui8shi/autotools-parser.git" }
owned_chars = "0.3.2"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
slab = "0.4.9"

[dependencies.autotools-parser]
path="../autotools-parser"
