[package]
name = "c2cargo"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.1"
csv = "1.4.0"
futures = "0.3.31"
heck = "0.5.0"
itertools = "0.14.0"
llm = "1.3.3"
owned_chars = "0.3.2"
pkg-config = "0.3.32"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
slab = "0.4.9"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
# autotools-parser = { git = "https://github.com/kui8shi/autotools-parser.git" }

[dependencies.autotools-parser]
path="../autotools-parser"
